# ray-tracer

./: CMakeLists.txt  README.md  main.cpp
src/: AABB.h  BVH_Node.cpp  BVH_Node.h  Box.cpp  Camera.h  ConstantMedium.cpp  ConstantMedium.h  Hittable.h  HittableList.cpp  HittableList.h  Image.cpp  Image.h  Material.h  MovingSphere.cpp  MovingSphere.h  ObjModel.cpp  ObjModel.h  Ray.cpp  Ray.h  Rect.cpp  Rect.h  Rotate.cpp  Rotate.h  Scene.cpp  Scene.h  Sphere.cpp  Sphere.h  Texture.h  Timer.h  Translate.cpp  Utility.h  Vec3.cpp  Vec3.h  stb_image_write.h  tiny_obj_loader.cpp  tiny_obj_loader.h
src/Primitives/: BVH_Node.cpp  BVH_Node.h  Box.cpp  Box.h  Hittable.h  HittableList.cpp  HittableList.h  MovingSphere.cpp  MovingSphere.h  ObjModel.cpp  ObjModel.h  Rect.cpp  Rect.h  Rotate.cpp  Sphere.cpp  Sphere.h  Translate.cpp  Translate.h
